--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,16 @@
-*.cpp linguist-language=C++ text working-tree-encoding=UTF-8
-*.h linguist-language=C++ text working-tree-encoding=UTF-8
+# Указываем что это текстовые файлы
+*.cpp text
+*.h text
+*.txt text
+*.md text
+
+# Принудительно UTF-8
+*.cpp charset=utf-8
+*.h charset=utf-8
+*.txt charset=utf-8
+*.md charset=utf-8
+
+# Отключаем обработку бинарных файлов
+*.png binary
+*.jpg binary
+*.exe binary
